# combinators

./: README.md  combinators.cabal
src/: BM.hs  Comb.hs  Equation.hs  SKI.hs  Search.hs
