cabal-version:      2.4

name:               combinators
version:            1.0.0.0
description:        This package provides a way for 
                    define combinators and provides
                    some utilities for searching 
                    among them.

license:            NONE
author:             Adrián Enríquez Ballester
maintainer:         adrianen@ucm.es

library
    hs-source-dirs:   src
    ghc-options:      -Wall -O2
    default-language: Haskell2010
    exposed-modules:  BM,
                      Comb,
                      Equation,
                      Search,
                      SKI

    build-depends:    base >=4.13.0.0,
                      containers
